<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".result.history"
    tools:ignore="UnknownIdInLayout">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="421dp"
        android:layout_height="181dp"
        android:layout_marginTop="12dp"
        android:background="@color/gray"
        android:text="@string/textView3"
        android:textSize="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="364dp"
        android:layout_height="88dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/box2"
        android:text="@string/textView4"
        android:textSize="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="364dp"
        android:layout_height="88dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/box2"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textView5"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:layout_editor_absoluteX="24dp"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/textView7"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="49dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/textView8"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="125dp" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/textView8"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="125dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/textView9"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="188dp" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/textView14"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="188dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/textView6"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="125dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/textView13"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="125dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/box3"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="65dp"
        android:layout_height="65dp"
        app:cardCornerRadius="75dp"
        app:cardElevation="0dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="248dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/doctor" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        app:cardCornerRadius="75dp"
        app:cardElevation="0dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="353dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/doctor2" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>